crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rlp (a int, b varchar) partition by range (a);"
---
CreateStmt@0..59
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..16
    Ident@13..16 "rlp"
  Whitespace@16..17 " "
  Ascii40@17..18 "("
  ColumnDef@18..23
    Ident@18..19 "a"
    Whitespace@19..20 " "
    TypeName@20..23
      IntP@20..23 "int"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ColumnDef@25..34
    Ident@25..26 "b"
    Whitespace@26..27 " "
    TypeName@27..34
      Varchar@27..34 "varchar"
  Ascii41@34..35 ")"
  Whitespace@35..36 " "
  PartitionSpec@36..57
    Partition@36..45 "partition"
    Whitespace@45..46 " "
    By@46..48 "by"
    Whitespace@48..49 " "
    Range@49..54 "range"
    Whitespace@54..55 " "
    Ascii40@55..56 "("
    PartitionElem@56..57
      Ident@56..57 "a"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

