crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@270.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table list_part3 partition of list_part for values in (3);
---
CreateStmt@0..65
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..23
    Ident@13..23 "list_part3"
  Whitespace@23..24 " "
  Partition@24..33 "partition"
  Whitespace@33..34 " "
  Of@34..36 "of"
  Whitespace@36..37 " "
  RangeVar@37..46
    Ident@37..46 "list_part"
  Whitespace@46..47 " "
  For@47..50 "for"
  Whitespace@50..51 " "
  Values@51..57 "values"
  Whitespace@57..58 " "
  PartitionBoundSpec@58..63
    InP@58..60 "in"
    Whitespace@60..61 " "
    Ascii40@61..62 "("
    AConst@62..63
      Iconst@62..63 "3"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

