crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@272.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into list_part select generate_series(1,4);"
---
InsertStmt@0..50
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "list_part"
  Whitespace@21..22 " "
  SelectStmt@22..48
    Select@22..28 "select"
    Whitespace@28..29 " "
    ResTarget@29..48
      FuncCall@29..48
        Ident@29..44 "generate_series"
        Ascii40@44..45 "("
        AConst@45..46
          Iconst@45..46 "1"
        Ascii44@46..47 ","
        AConst@47..48
          Iconst@47..48 "4"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

