crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rlp_default partition of rlp default partition by list (a);
---
CreateStmt@0..72
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "rlp_default"
  Whitespace@24..25 " "
  Partition@25..34 "partition"
  Whitespace@34..35 " "
  Of@35..37 "of"
  Whitespace@37..38 " "
  RangeVar@38..41
    Ident@38..41 "rlp"
  Whitespace@41..42 " "
  PartitionBoundSpec@42..49
    Default@42..49 "default"
  Whitespace@49..50 " "
  PartitionSpec@50..70
    Partition@50..59 "partition"
    Whitespace@59..60 " "
    By@60..62 "by"
    Whitespace@62..63 " "
    Ident@63..67 "list"
    Whitespace@67..68 " "
    Ascii40@68..69 "("
    PartitionElem@69..70
      Ident@69..70 "a"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

