crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@291.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select explain_parallel_append('execute ab_q4 (2, 2)');"
---
SelectStmt@0..55
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..53
    FuncCall@7..53
      Ident@7..30 "explain_parallel_append"
      Ascii40@30..31 "("
      AConst@31..53
        Sconst@31..53 "'execute ab_q4 (2, 2)'"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

