crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@293.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select explain_parallel_append('execute ab_q5 (1, 1, 1)');"
---
SelectStmt@0..58
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..30 "explain_parallel_append"
      Ascii40@30..31 "("
      AConst@31..56
        Sconst@31..56 "'execute ab_q5 (1, 1, ..."
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

